Сейчас уже есть хорошая заготовка

--- a/Pages/Magazine.html
+++ b/Pages/Magazine.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../stylesheets/main.css">
+    <link rel="stylesheet" href="../stylesheets/magazine.css">
+    <script defer src="../scripts/jquery-3.6.4.js"></script>
+    <script defer src="../scripts/app.js"></script>
     <title>Title</title>
+
 </head>
-
-
 
 <body>
     <header>
@@ -21,29 +23,22 @@
         </nav>
     </header>
 
+
     <main>
-        <div class="promos">
-            <div class="promo">
-                <img src="https://b-apteka.ru/uploads/45135b0c0085a0a9c4219e9aa01842de/16/3248479/1677648128_Скидка%20при%20покупке%20354х150.png" >
-                <a href="#"> <p>АКЦИИ МАРТА</p>   </a>
-                <p>Акции марта</p>
-                <p>01.03-31.03 2023 <a href="#">Смотреть</a>
+
+
+        <div class="container">
+            <div class="tabs">
+                <a href="#"><span class="active">Новые</span> </a>
+                <a href="#"><span class="active">Старые</span> </a>
+                <a href="#"><span class="active">Добавить</span> </a>
             </div>
-            <div class="promo">
-                <img src="https://b-apteka.ru/uploads/45135b0c0085a0a9c4219e9aa01842de/16/3248481/1677649272_Косметика_354x150.png" >
-                <a href="#"> <p>ТОВАРЫ ДЛЯ КРАСОТЫ</p>   </a>
-                <p>Скидки на товары для красоты</p>
-                <p>01.03-31.03 2023 <a href="#">Смотреть</a>
-            </div>
-            <div class="promo">
-                <img src="https://b-apteka.ru/uploads/45135b0c0085a0a9c4219e9aa01842de/16/3248483/1677649997_Вместе%20выгодно%20354х150.png" >
-                <a href="#"> <p>ВМЕСТЕ ВЫГОДНО</p>   </a>
-                <p>вместе покупать выгодно</p>
-                <p>01.03-31.03 2023 <a href="#">Смотреть</a></p>
+            <div class="content">
+                <ul>
+                </ul>
             </div>
         </div>
     </main>
-
 
     <footer>
         <br>
@@ -52,10 +47,10 @@
                 <td rowspan="4">
                     <img src="../img/pngegg%20(2).png">
                 </td>
-                <td> <h3>О компании</h3> </td>
-                <td> <h3>Помощь</h3> </td>
-                <td> <h3>Правила и акции</h3> </td>
-                <td> <h3>8 800 555 35 35</h3> </td>
+                <td > <h3>О компании</h3> </td>
+                <td > <h3>Помощь</h3> </td>
+                <td > <h3>Правила и акции</h3> </td>
+                <td > <h3>8 800 555 35 35</h3> </td>
             </tr>
             <tr>
                 <td><a href="#">О нас</a></td>
@@ -72,7 +67,5 @@
             </tr>
         </table>
     </footer>
-
 </body>
-
 </html>
