--- a/Pages/MainPage.html
+++ b/Pages/MainPage.html
@@ -2,139 +2,145 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../stylesheets/main.css">
     <title>Title</title>
 </head>
 
-<header>
-    <a href="MainPage.html" class="logo">Здоровее Будешь</a>
-    <nav>
-        <ul>
-            <li><a href="DeliveryPage.html">Оплата и доставка</a></li>
-            <li><a href="MapPage.html">Наши аптеки</a></li>
-            <li> <a href="PromoPage.html">Акции</a></li>
-        </ul>
-    </nav>
-</header>
 
 <body>
-    <div style="display: flex; justify-content: center; padding-top: 25px">
-        <img src="https://cdn.budzdorov.ru/media/tj_banner/images/63f46a54b4dad8.04127500.jpg">
-    </div>
-    <div style="margin-left: 15%">
-        <h2>Специальные предложения</h2>
-    </div>
-    <div class="offers">
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/1.jpg"></a>
-            <a href="#">СофтЛайф премиум ватные палочки на бумажной основе с добавлением бамбука №100</a>
-        </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/2.jpg"></a>
-            <a href="#">СофтЛайф премиум ватные диски прямоугольные черные №80</a>
-        </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/3.jpg"></a>
-            <a href="#">Будь Здоров! Рыбный жир 75мл</a>
-        </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/4.jpg"></a>
-            <a href="#">Будь Здоров! Грин фиточай Фитосбор №1 толокнянка ф/п 2г №20</a>
-        </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/5.jpg"></a>
-            <a href="#">АВС хэлси фуд клетчатка Сибирская стопаппетит 8,5г №14</a>
-        </div>
-    </div>
+    <header>
+        <a href="MainPage.html" class="logo">Здоровее Будешь</a>
+        <nav>
+            <ul>
+                <li><a href="Magazine.html">Асортимент товаров</a></li>
+                <li><a href="DeliveryPage.html">Оплата и доставка</a></li>
+                <li><a href="MapPage.html">Наши аптеки</a></li>
+                <li> <a href="PromoPage.html">Акции</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <div style="margin-left: 15%">
-        <h2>Каталог товаров</h2>
-    </div>
-    <div class="offers">
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/1.jpg"></a>
-            <a href="#">СофтЛайф премиум ватные палочки на бумажной основе с добавлением бамбука №100</a>
+    <main>
+        <div style="display: flex; justify-content: center; padding-top: 25px">
+            <img src="https://cdn.budzdorov.ru/media/tj_banner/images/63f46a54b4dad8.04127500.jpg">
         </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/2.jpg"></a>
-            <a href="#">СофтЛайф премиум ватные диски прямоугольные черные №80</a>
+        <div style="margin-left: 15%">
+            <h2>Специальные предложения</h2>
         </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/3.jpg"></a>
-            <a href="#">Будь Здоров! Рыбный жир 75мл</a>
-        </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/4.jpg"></a>
-            <a href="#">Будь Здоров! Грин фиточай Фитосбор №1 толокнянка ф/п 2г №20</a>
-        </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/5.jpg"></a>
-            <a href="#">АВС хэлси фуд клетчатка Сибирская стопаппетит 8,5г №14</a>
-        </div>
-        <div class="offer">
-            <a href="#"><img src="https://cdn.budzdorov.ru/media/catalog/product/cache/1e8ef93b9b4867ab9f3538dde2cb3b8a/1/1/113044-c-0-8-9-c089a3e77f904efd2884c5ab3cdad57d3b9ebc0b_113044.jpg"></a>
-            <a href="#">Инвитро Здоровье щитовидной железы</a>
+        <div class="offers">
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/1.jpg"></a>
+                <a href="#">СофтЛайф премиум ватные палочки на бумажной основе с добавлением бамбука №100</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/2.jpg"></a>
+                <a href="#">СофтЛайф премиум ватные диски прямоугольные черные №80</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/3.jpg"></a>
+                <a href="#">Будь Здоров! Рыбный жир 75мл</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/4.jpg"></a>
+                <a href="#">Будь Здоров! Грин фиточай Фитосбор №1 толокнянка ф/п 2г №20</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/5.jpg"></a>
+                <a href="#">АВС хэлси фуд клетчатка Сибирская стопаппетит 8,5г №14</a>
+            </div>
         </div>
 
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/1.jpg"></a>
-            <a href="#">СофтЛайф премиум ватные палочки на бумажной основе с добавлением бамбука №100</a>
+        <div style="margin-left: 15%">
+            <h2>Каталог товаров</h2>
         </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/2.jpg"></a>
-            <a href="#">СофтЛайф премиум ватные диски прямоугольные черные №80</a>
-        </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/3.jpg"></a>
-            <a href="#">Будь Здоров! Рыбный жир 75мл</a>
-        </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/4.jpg"></a>
-            <a href="#">Будь Здоров! Грин фиточай Фитосбор №1 толокнянка ф/п 2г №20</a>
-        </div>
-        <div class="offer">
-            <a href="#"><img src="../img/medecine/5.jpg"></a>
-            <a href="#">АВС хэлси фуд клетчатка Сибирская стопаппетит 8,5г №14</a>
-        </div>
-        <div class="offer">
-            <a href="#"><img src="https://cdn.budzdorov.ru/media/catalog/product/cache/1e8ef93b9b4867ab9f3538dde2cb3b8a/1/1/113044-c-0-8-9-c089a3e77f904efd2884c5ab3cdad57d3b9ebc0b_113044.jpg"></a>
-            <a href="#">Инвитро Здоровье щитовидной железы</a>
-        </div>
-    </div>
+        <div class="offers">
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/1.jpg"></a>
+                <a href="#">СофтЛайф премиум ватные палочки на бумажной основе с добавлением бамбука №100</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/2.jpg"></a>
+                <a href="#">СофтЛайф премиум ватные диски прямоугольные черные №80</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/3.jpg"></a>
+                <a href="#">Будь Здоров! Рыбный жир 75мл</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/4.jpg"></a>
+                <a href="#">Будь Здоров! Грин фиточай Фитосбор №1 толокнянка ф/п 2г №20</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/5.jpg"></a>
+                <a href="#">АВС хэлси фуд клетчатка Сибирская стопаппетит 8,5г №14</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="https://cdn.budzdorov.ru/media/catalog/product/cache/1e8ef93b9b4867ab9f3538dde2cb3b8a/1/1/113044-c-0-8-9-c089a3e77f904efd2884c5ab3cdad57d3b9ebc0b_113044.jpg"></a>
+                <a href="#">Инвитро Здоровье щитовидной железы</a>
+            </div>
 
-    <div class="promos">
-        <div class="promo"> <img src="https://kazan.budzdorov.ru/img/loyalty-banners/loyalty_banner_3_1.jpg" style="width: 550px"></div>
-        <div class="promo"> <img src="https://kazan.budzdorov.ru/img/loyalty-banners/loyalty_banner_4_1.jpg" style="width: 550px"></div>
-    </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/1.jpg"></a>
+                <a href="#">СофтЛайф премиум ватные палочки на бумажной основе с добавлением бамбука №100</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/2.jpg"></a>
+                <a href="#">СофтЛайф премиум ватные диски прямоугольные черные №80</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/3.jpg"></a>
+                <a href="#">Будь Здоров! Рыбный жир 75мл</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/4.jpg"></a>
+                <a href="#">Будь Здоров! Грин фиточай Фитосбор №1 толокнянка ф/п 2г №20</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="../img/medecine/5.jpg"></a>
+                <a href="#">АВС хэлси фуд клетчатка Сибирская стопаппетит 8,5г №14</a>
+            </div>
+            <div class="offer">
+                <a href="#"><img src="https://cdn.budzdorov.ru/media/catalog/product/cache/1e8ef93b9b4867ab9f3538dde2cb3b8a/1/1/113044-c-0-8-9-c089a3e77f904efd2884c5ab3cdad57d3b9ebc0b_113044.jpg"></a>
+                <a href="#">Инвитро Здоровье щитовидной железы</a>
+            </div>
+        </div>
+
+        <div class="promos">
+            <div class="promo"> <img src="https://kazan.budzdorov.ru/img/loyalty-banners/loyalty_banner_3_1.jpg" style="width: 550px"></div>
+            <div class="promo"> <img src="https://kazan.budzdorov.ru/img/loyalty-banners/loyalty_banner_4_1.jpg" style="width: 550px"></div>
+        </div>
+    </main>
+
+    <footer>
+        <br>
+        <table align="center" cellpadding="5" bgcolor="#f0ffff">
+            <tr>
+                <td rowspan="4">
+                    <img src="../img/pngegg%20(2).png">
+                </td>
+                <td > <h3>О компании</h3> </td>
+                <td > <h3>Помощь</h3> </td>
+                <td > <h3>Правила и акции</h3> </td>
+                <td > <h3>8 800 555 35 35</h3> </td>
+            </tr>
+            <tr>
+                <td><a href="#">О нас</a></td>
+                <td><a href="#">Как сделать заказ</a></td>
+                <td><a href="#">Акции и предложения</a></td>
+                <td><a href="#">apteka@kzn116.ru</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">О нас</a></td>
+                <td><a href="#">Как сделать заказ</a></td>
+            </tr>
+            <tr>
+                <td><a href="#">О нас</a></td>
+            </tr>
+        </table>
+    </footer>
 
 </body>
 
-<footer>
-    <br>
-    <table align="center" cellpadding="5" bgcolor="#f0ffff">
-        <tr>
-            <td rowspan="4">
-                <img src="../img/pngegg%20(2).png">
-            </td>
-            <td > <h3>О компании</h3> </td>
-            <td > <h3>Помощь</h3> </td>
-            <td > <h3>Правила и акции</h3> </td>
-            <td > <h3>8 800 555 35 35</h3> </td>
-        </tr>
-        <tr>
-            <td><a href="#">О нас</a></td>
-            <td><a href="#">Как сделать заказ</a></td>
-            <td><a href="#">Акции и предложения</a></td>
-            <td><a href="#">apteka@kzn116.ru</a></td>
-        </tr>
-        <tr>
-            <td><a href="#">О нас</a></td>
-            <td><a href="#">Как сделать заказ</a></td>
-        </tr>
-        <tr>
-            <td><a href="#">О нас</a></td>
-        </tr>
-    </table>
-</footer>
+
 
 </html>
