--- a/Pages/Magazine.html
+++ b/Pages/Magazine.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../stylesheets/magazine.css">
     <script defer src="../scripts/jquery-3.6.4.js"></script>
     <script defer src="../scripts/app.js"></script>
+    <script defer type="text/javascript" src="../scripts/jquery.lazy.js"></script>
+    <script defer src="../scripts/mainPage.js"></script>
     <title>Title</title>
 
 </head>
@@ -29,13 +31,11 @@
 
         <div class="container">
             <div class="tabs">
-                <a href="#"><span class="active">Новые</span> </a>
-                <a href="#"><span class="active">Старые</span> </a>
+                <a href="#"><span class="active">Спец. предложения</span> </a>
+                <a href="#"><span class="active">Весь асортимент</span> </a>
                 <a href="#"><span class="active">Добавить</span> </a>
             </div>
             <div class="content">
-                <ul>
-                </ul>
             </div>
         </div>
     </main>
