--- a/Pages/Magazine.html
+++ b/Pages/Magazine.html
@@ -34,6 +34,8 @@
                 <a href="#"><span class="active">Спец. предложения</span> </a>
                 <a href="#"><span class="active">Весь асортимент</span> </a>
                 <a href="#"><span class="active">Добавить</span> </a>
+                <a href="#"><span class="active">Теги</span> </a>
+                <a href="#"><span class="active">Добавить Теги</span> </a>
             </div>
             <div class="content">
             </div>
